// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Header locked state matches snapshot: locked 1`] = `
<div>
  <div
    class="mm-box multichain-app-header multichain-app-header-shadow mm-box--margin-bottom-4 mm-box--display-flex mm-box--align-items-center mm-box--width-full mm-box--background-color-background-default"
  >
    <div
      class="mm-box multichain-app-header__lock-contents mm-box--padding-2 mm-box--display-flex mm-box--gap-2 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-background-default"
    >
      <div>
        <button
          aria-label="Network Menu Chain 5"
          class="mm-box mm-picker-network multichain-app-header__contents__network-picker mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--align-items-center mm-box--background-color-background-alternative mm-box--rounded-pill"
          data-testid="network-display"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-picker-network__avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
            role="img"
          >
            C
          </div>
          <p
            class="mm-box mm-text mm-text--body-sm mm-text--ellipsis mm-box--color-text-default"
          >
            Chain 5
          </p>
          <span
            class="mm-box mm-picker-network__arrow-down-icon mm-icon mm-icon--size-xs mm-box--margin-left-auto mm-box--display-inline-block mm-box--color-icon-default"
            style="mask-image: url('./images/icons/arrow-down.svg');"
          />
        </button>
      </div>
      <button
        class="mm-box app-header__logo-container app-header__logo-container--clickable mm-box--background-color-transparent"
        data-testid="app-header-logo"
      >
        <svg
          class="app-header__metafox-logo--horizontal"
          height="30"
          viewBox="0 0 1316 1264"
          width="162"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1229.81 1220.25L946.346 1136.22L732.573 1263.43L583.427 1263.37L369.53 1136.22L86.1888 1220.25L6.10352e-05 930.603L86.1888 609.141L6.10352e-05 337.353L86.1888 0.506348L528.933 263.83H787.067L1229.81 0.506348L1316 337.353L1229.81 609.141L1316 930.603L1229.81 1220.25Z"
            fill="#FF5C16"
          />
          <path
            d="M86.2504 0.506348L528.995 264.015L511.386 444.857L86.2504 0.506348Z"
            fill="#FF5C16"
          />
          <path
            d="M369.593 930.727L564.398 1078.45L369.593 1136.22V930.727Z"
            fill="#FF5C16"
          />
          <path
            d="M548.827 686.494L511.386 444.98L271.726 609.202L271.602 609.14V609.264L272.344 778.305L369.53 686.494H369.592H548.827Z"
            fill="#FF5C16"
          />
          <path
            d="M1229.81 0.506348L787.066 264.015L804.613 444.857L1229.81 0.506348Z"
            fill="#FF5C16"
          />
          <path
            d="M946.469 930.727L751.664 1078.45L946.469 1136.22V930.727Z"
            fill="#FF5C16"
          />
          <path
            d="M1044.4 609.264H1044.46H1044.4V609.14L1044.34 609.202L804.675 444.98L767.234 686.494H946.469L1043.72 778.305L1044.4 609.264Z"
            fill="#FF5C16"
          />
          <path
            d="M369.53 1136.22L86.1888 1220.25L6.10352e-05 930.727H369.53V1136.22Z"
            fill="#E34807"
          />
          <path
            d="M548.766 686.433L602.889 1035.57L527.883 841.449L272.221 778.305L369.469 686.433H548.704H548.766Z"
            fill="#E34807"
          />
          <path
            d="M946.469 1136.22L1229.81 1220.25L1316 930.727H946.469V1136.22Z"
            fill="#E34807"
          />
          <path
            d="M767.234 686.433L713.111 1035.57L788.117 841.449L1043.78 778.305L946.469 686.433H767.234Z"
            fill="#E34807"
          />
          <path
            d="M6.10352e-05 930.602L86.1888 609.139H271.541L272.221 778.242L527.883 841.386L602.889 1035.51L564.335 1078.27L369.53 930.54H6.10352e-05V930.602Z"
            fill="#FF8D5D"
          />
          <path
            d="M1316 930.602L1229.81 609.139H1044.46L1043.78 778.242L788.117 841.386L713.111 1035.51L751.664 1078.27L946.469 930.54H1316V930.602Z"
            fill="#FF8D5D"
          />
          <path
            d="M787.067 263.831H658H528.933L511.387 444.672L602.889 1035.33H713.111L804.675 444.672L787.067 263.831Z"
            fill="#FF8D5D"
          />
          <path
            d="M86.1888 0.506348L6.10352e-05 337.353L86.1888 609.141H271.541L511.325 444.857L86.1888 0.506348Z"
            fill="#661800"
          />
          <path
            d="M495.199 756.557H411.234L365.514 801.165L527.944 841.263L495.199 756.495V756.557Z"
            fill="#661800"
          />
          <path
            d="M1229.81 0.506348L1316 337.353L1229.81 609.141H1044.46L804.675 444.857L1229.81 0.506348Z"
            fill="#661800"
          />
          <path
            d="M820.925 756.557H905.013L950.733 801.227L788.118 841.386L820.925 756.495V756.557Z"
            fill="#661800"
          />
          <path
            d="M732.512 1148.21L751.665 1078.39L713.112 1035.64H602.827L564.274 1078.39L583.427 1148.21"
            fill="#661800"
          />
          <path
            d="M732.511 1148.2V1263.49H583.426V1148.2H732.511Z"
            fill="#C0C4CD"
          />
          <path
            d="M369.593 1136.1L583.551 1263.44V1148.15L564.398 1078.33L369.593 1136.1Z"
            fill="#E7EBF6"
          />
          <path
            d="M946.47 1136.1L732.512 1263.44V1148.15L751.665 1078.33L946.47 1136.1Z"
            fill="#E7EBF6"
          />
        </svg>
        <img
          alt=""
          class="app-header__metafox-logo--icon"
          src="./images/logo/metamask-fox.svg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`App Header unlocked state matches snapshot: unlocked 1`] = `
<div>
  <div
    class="mm-box multichain-app-header-logo mm-box--margin-2 mm-box--display-none mm-box--sm:display-flex mm-box--justify-content-center mm-box--align-items-center"
    data-testid="app-header-logo"
  >
    <button
      class="mm-box app-header__logo-container app-header__logo-container--clickable mm-box--background-color-transparent"
      data-testid="app-header-logo"
    >
      <svg
        class="app-header__metafox-logo--horizontal"
        height="30"
        viewBox="0 0 1316 1264"
        width="162"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1229.81 1220.25L946.346 1136.22L732.573 1263.43L583.427 1263.37L369.53 1136.22L86.1888 1220.25L6.10352e-05 930.603L86.1888 609.141L6.10352e-05 337.353L86.1888 0.506348L528.933 263.83H787.067L1229.81 0.506348L1316 337.353L1229.81 609.141L1316 930.603L1229.81 1220.25Z"
          fill="#FF5C16"
        />
        <path
          d="M86.2504 0.506348L528.995 264.015L511.386 444.857L86.2504 0.506348Z"
          fill="#FF5C16"
        />
        <path
          d="M369.593 930.727L564.398 1078.45L369.593 1136.22V930.727Z"
          fill="#FF5C16"
        />
        <path
          d="M548.827 686.494L511.386 444.98L271.726 609.202L271.602 609.14V609.264L272.344 778.305L369.53 686.494H369.592H548.827Z"
          fill="#FF5C16"
        />
        <path
          d="M1229.81 0.506348L787.066 264.015L804.613 444.857L1229.81 0.506348Z"
          fill="#FF5C16"
        />
        <path
          d="M946.469 930.727L751.664 1078.45L946.469 1136.22V930.727Z"
          fill="#FF5C16"
        />
        <path
          d="M1044.4 609.264H1044.46H1044.4V609.14L1044.34 609.202L804.675 444.98L767.234 686.494H946.469L1043.72 778.305L1044.4 609.264Z"
          fill="#FF5C16"
        />
        <path
          d="M369.53 1136.22L86.1888 1220.25L6.10352e-05 930.727H369.53V1136.22Z"
          fill="#E34807"
        />
        <path
          d="M548.766 686.433L602.889 1035.57L527.883 841.449L272.221 778.305L369.469 686.433H548.704H548.766Z"
          fill="#E34807"
        />
        <path
          d="M946.469 1136.22L1229.81 1220.25L1316 930.727H946.469V1136.22Z"
          fill="#E34807"
        />
        <path
          d="M767.234 686.433L713.111 1035.57L788.117 841.449L1043.78 778.305L946.469 686.433H767.234Z"
          fill="#E34807"
        />
        <path
          d="M6.10352e-05 930.602L86.1888 609.139H271.541L272.221 778.242L527.883 841.386L602.889 1035.51L564.335 1078.27L369.53 930.54H6.10352e-05V930.602Z"
          fill="#FF8D5D"
        />
        <path
          d="M1316 930.602L1229.81 609.139H1044.46L1043.78 778.242L788.117 841.386L713.111 1035.51L751.664 1078.27L946.469 930.54H1316V930.602Z"
          fill="#FF8D5D"
        />
        <path
          d="M787.067 263.831H658H528.933L511.387 444.672L602.889 1035.33H713.111L804.675 444.672L787.067 263.831Z"
          fill="#FF8D5D"
        />
        <path
          d="M86.1888 0.506348L6.10352e-05 337.353L86.1888 609.141H271.541L511.325 444.857L86.1888 0.506348Z"
          fill="#661800"
        />
        <path
          d="M495.199 756.557H411.234L365.514 801.165L527.944 841.263L495.199 756.495V756.557Z"
          fill="#661800"
        />
        <path
          d="M1229.81 0.506348L1316 337.353L1229.81 609.141H1044.46L804.675 444.857L1229.81 0.506348Z"
          fill="#661800"
        />
        <path
          d="M820.925 756.557H905.013L950.733 801.227L788.118 841.386L820.925 756.495V756.557Z"
          fill="#661800"
        />
        <path
          d="M732.512 1148.21L751.665 1078.39L713.112 1035.64H602.827L564.274 1078.39L583.427 1148.21"
          fill="#661800"
        />
        <path
          d="M732.511 1148.2V1263.49H583.426V1148.2H732.511Z"
          fill="#C0C4CD"
        />
        <path
          d="M369.593 1136.1L583.551 1263.44V1148.15L564.398 1078.33L369.593 1136.1Z"
          fill="#E7EBF6"
        />
        <path
          d="M946.47 1136.1L732.512 1263.44V1148.15L751.665 1078.33L946.47 1136.1Z"
          fill="#E7EBF6"
        />
      </svg>
      <img
        alt=""
        class="app-header__metafox-logo--icon"
        src="./images/logo/metamask-fox.svg"
      />
    </button>
  </div>
  <div
    class="mm-box multichain-app-header mm-box--margin-bottom-4 mm-box--display-flex mm-box--align-items-center mm-box--width-full mm-box--background-color-background-alternative"
  >
    <div
      class="mm-box multichain-app-header__contents multichain-app-header-shadow mm-box--padding-2 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--gap-2 mm-box--align-items-center mm-box--width-full mm-box--background-color-background-default"
    >
      <div>
        <button
          aria-label="Network Menu Chain 5"
          class="mm-box mm-picker-network multichain-app-header__contents__network-picker mm-box--margin-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-none mm-box--sm:display-flex mm-box--gap-2 mm-box--align-items-center mm-box--background-color-background-alternative mm-box--rounded-pill"
          data-testid="network-display"
          disabled=""
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-picker-network__avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
            role="img"
          >
            C
          </div>
          <p
            class="mm-box mm-text mm-text--body-sm mm-text--ellipsis mm-box--color-text-default"
          >
            Chain 5
          </p>
          <span
            class="mm-box mm-picker-network__arrow-down-icon mm-icon mm-icon--size-xs mm-box--margin-left-auto mm-box--display-inline-block mm-box--color-icon-default"
            style="mask-image: url('./images/icons/arrow-down.svg');"
          />
        </button>
      </div>
      <div
        class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-center mm-box--color-text-default"
      >
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-sm mm-button-base--ellipsis multichain-account-picker mm-text--body-md-medium mm-text--ellipsis mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--gap-2 mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-transparent mm-box--rounded-lg"
          data-testid="account-menu-icon"
        >
          <span
            class="mm-box mm-text mm-text--inherit mm-text--ellipsis mm-box--display-flex mm-box--gap-2 mm-box--align-items-center mm-box--color-text-default"
          >
            <div
              class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-account mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-background-default box--border-style-solid box--border-width-1"
            >
              <div
                class="mm-avatar-account__jazzicon"
              >
                <div
                  style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 16px; height: 16px; display: inline-block; background: rgb(250, 58, 0);"
                >
                  <svg
                    height="16"
                    width="16"
                    x="0"
                    y="0"
                  >
                    <rect
                      fill="#18CDF2"
                      height="16"
                      transform="translate(-0.52419675189697 -1.6521420347302493) rotate(328.9 8 8)"
                      width="16"
                      x="0"
                      y="0"
                    />
                    <rect
                      fill="#035E56"
                      height="16"
                      transform="translate(-9.149230854416022 5.2962309358743) rotate(176.2 8 8)"
                      width="16"
                      x="0"
                      y="0"
                    />
                    <rect
                      fill="#F26602"
                      height="16"
                      transform="translate(8.333921009111961 -7.102569861498541) rotate(468.9 8 8)"
                      width="16"
                      x="0"
                      y="0"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-account mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-background-default box--border-style-solid box--border-width-1"
            >
              <div
                class="mm-avatar-account__jazzicon"
              >
                <div
                  style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 16px; height: 16px; display: inline-block; background: rgb(250, 58, 0);"
                >
                  <svg
                    height="16"
                    width="16"
                    x="0"
                    y="0"
                  >
                    <rect
                      fill="#18CDF2"
                      height="16"
                      transform="translate(-0.52419675189697 -1.6521420347302493) rotate(328.9 8 8)"
                      width="16"
                      x="0"
                      y="0"
                    />
                    <rect
                      fill="#035E56"
                      height="16"
                      transform="translate(-9.149230854416022 5.2962309358743) rotate(176.2 8 8)"
                      width="16"
                      x="0"
                      y="0"
                    />
                    <rect
                      fill="#F26602"
                      height="16"
                      transform="translate(8.333921009111961 -7.102569861498541) rotate(468.9 8 8)"
                      width="16"
                      x="0"
                      y="0"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="mm-box mm-text multichain-account-picker__label mm-text--body-md mm-text--font-weight-bold mm-text--ellipsis mm-box--color-text-default"
            >
              Test Account
            </span>
          </span>
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-1 mm-box--display-inline-block mm-box--color-icon-default"
            style="mask-image: url('./images/icons/arrow-down.svg');"
          />
        </button>
        <div>
          <div
            aria-describedby="tippy-tooltip-1"
            class=""
            data-original-title="Copy to clipboard"
            data-tooltipped=""
            style="display: inline;"
            tabindex="0"
          >
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-sm mm-button-base--ellipsis multichain-app-header__address-copy-button mm-text--body-md-medium mm-text--ellipsis mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-transparent mm-box--rounded-lg"
              data-testid="app-header-copy-button"
              style="height: auto;"
            >
              <span
                class="mm-box mm-text mm-text--inherit mm-text--ellipsis mm-box--display-flex mm-box--gap-2 mm-box--align-items-center mm-box--color-text-default"
              >
                <span
                  class="mm-box mm-text mm-text--body-sm mm-text--ellipsis mm-box--color-text-alternative"
                >
                  0x0DCD5...3E7bc
                </span>
              </span>
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-1 mm-box--display-inline-block mm-box--color-icon-alternative"
                style="mask-image: url('./images/icons/copy.svg');"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--justify-content-flex-end mm-box--align-items-center"
        style="margin-left: auto;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--gap-4"
        >
           
          <div
            class="mm-box mm-box--display-flex mm-box--justify-content-flex-end mm-box--width-full"
          >
            <div
              class="mm-box"
              style="position: relative;"
            />
            <button
              aria-label="Account options"
              class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              data-testid="account-options-menu-button"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/more-vertical.svg');"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
